<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="welcome">Welcome</string>
    <string name="phone_hint">Enter phone number</string>
    <string name="login">Login</string>
    <string name="continue_text">Continue</string>
    <string name="choose_governorate">Choose governorate</string>
    <string name="nearby_restaurants">Nearby restaurants</string>
    <string name="use_my_location">Use my location</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="delivery_time">Delivery time</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="order_now">Order now</string>
    <string name="invalid_phone">Please enter a valid Iraqi mobile number.</string>
    <string name="login_success">Login successful.</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_theme">Choose theme</string>
</resources>
